like you can with Rake). Example:

  cucumber FOO=BAR --format progress features

You can now pick up ENV['FOO'] in ruby (for example in env.rb) and take actions according to the value,
for example enabling your super hack that validates all HTTP responses for XHTML validity.

This release also has several bugfixes related to --format and Before/Adter hooks.

=== Bugfixes
* Improved alignment of table cells in pretty formatter (Stefan Kanev)
* Before and After hooks run after everything is finished whn there are 2+ --format options (#371 Aslak Hellesøy)
* When using --out and two --format the first is not delivered inline with execution of features (#361 Aslak Hellesøy)
* Profile Formatter broken (#370 Aslak Hellesøy)
* Default profile usage with --drb flag degrades gracefully with no server. (#367 Ben Mabey)
* JUnit formatter uses original file name instead of narrative to avoid accidental duplicate XML files (Aslak Hellesøy)
* rake gems no longer lists cucumber as a [F]ramework gem (David Chelimsky)
* CLI issues correct exit code when using --drb. Requires Spork version >= 0.5.1. (#355 Ben Mabey)
* Make sure script/generate cucumber --spork uses the cucumber Rails environment (Philippe Lafoucrière)
* Fixed bug with rake task raising errors with feature files with spaces (#380 Joseph Wilk)

=== New Features
* Load step definitions from vendored gems and plugins (Mike Burns)
* New --format steps formatter. Variant of the usage formatter that lists available step definitions (Demetrius Nunes)
* Possibility to specify scenario language as part of the .feature file (#345 Aslak Hellesøy)
* Support specifying environment variables using foo=bar syntax on command line or in profiles (#362 Bryan Helmkamp)
* Display failing scenarios at the end of pretty format to make it easier for people to play them back (#360 Ryan Bigg)

=== Changed Features
* The data returned from Table#hashes and similar methods are frozen. Dup if you need to modify. (Aslak Hellesøy)